--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -17,6 +17,9 @@ gem 'puma', '~> 3.7'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 
+gem 'carrierwave'
+
+
 gem 'jwt'
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
