--- a/backend/config/cable.yml
+++ b/backend/config/cable.yml
@@ -7,4 +7,4 @@ test:
 production:
   adapter: redis
   url: redis://localhost:6379/1
-  channel_prefix: rails-jwt_production
+  channel_prefix: GTU-Store_production
