--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -13,15 +13,15 @@ default: &default
 
 development:
   <<: *default
-  database: ruby_jwt_test
+  database: gtu_store
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: ruby_jwt_test
+  database: gtu_store
 
 production:
   <<: *default
-  database: ruby_jwt_test
+  database: gtu_store
