--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -7,7 +7,7 @@
 default: &default
   adapter: mysql2
   username: root
-  password: 1234
+  password: 
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
