--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -17,6 +17,8 @@ gem 'puma', '~> 3.7'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 
+gem 'rack-cors'
+
 gem 'carrierwave'
 
 
