--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -36,12 +36,6 @@
           },
           "configurations": {
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
               "optimization": true,
               "outputHashing": "all",
               "sourceMap": false,
@@ -73,7 +67,8 @@
           },
           "configurations": {
             "production": {
-              "browserTarget": "gtuShop:build:production"
+              "browserTarget": "gtuShop:build:production",
+              "proxyConfig": "src/proxy.conf.prod.json"
             }
           }
         },
