--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.1",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
+    "ngx-cookie-service": "^2.2.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
